# rgbds

./: .checkpatch.conf  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis-checkpatch.sh  .travis-deps.sh  .travis.yml  ARCHITECTURE.md  AUTHORS  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockerfile  GNUmakefile  LICENSE  LICENSE.md  LICENSE.rst  Makefile  README  README.md  README.rst  RELEASE.md  RELEASE.rst  compile_flags.txt  foo.asm  foo.inc  log
src/: .gitignore  CMakeLists.txt  asmotor.h  backtrace.cpp  bison.sh  check_bison_ver.sh  cli.cpp  diagnostics.cpp  doc_postproc.awk  error.c  error.cpp  gbz80.7  hashmap.c  hashmap.cpp  linkdefs.c  linkdefs.cpp  opmath.c  opmath.cpp  rgbds.5  rgbds.7  rgbds.rgbformat.5  rpn.c  safelibc.c  stacklist.c  style.cpp  usage.cpp  util.cpp  verbosity.cpp  version.c  version.cpp
src/ASM/: ALLOCA.C  GLOBLEX.C  MATH.C  OUTPUT.C  SYMBOL.C
src/ASM/GAMEBOY/: LOCALASM.H  LOCALLEX.C  MAKEFILE
src/ASM/INCLUDE/: ASM.H  FSTACK.H  LEXER.H
src/LIB/: LIBRARY.C  MAKEFILE
src/LINK/: ASSIGN.C  LIBRARY.C  MAKEFILE  OBJECT.C  SYMBOL.C
src/LINK/INCLUDE/: OBJECT.H  OUTPUT.H  PATCH.H  SYMBOL.H
src/asm/: .gitignore  Makefile  actions.cpp  alloca.c  asmy.y  charmap.c  charmap.cpp  constexpr.c  fixpoint.c  fixpoint.cpp  format.c  format.cpp  fstack.c  fstack.cpp  globlex.c  gnustring.c  intern.cpp  keywords.gperf  lexer.c  lexer.cpp  locallex.c  macro.c  macro.cpp  main.c  main.cpp  makeinit  math.c  opt.c  opt.cpp  output.c  output.cpp  parser.y  rgbasm.1  rgbasm.5  rpn.c  rpn.cpp  section.c  section.cpp  stacklist.c  stdmake  (+8 more)
src/fix/: fix.cpp  main.c  main.cpp  mbc.cpp  rgbfix.1  warning.cpp
src/gfx/: color_set.cpp  convert.cpp  gb.c  main.c  main.cpp  makepng.c  pal_packing.cpp  pal_sorting.cpp  pal_spec.cpp  palette.cpp  png.c  png.cpp  process.cpp  proto_palette.cpp  reverse.cpp  rgba.cpp  rgbgfx.1  warning.cpp
src/lib/: .gitignore  Makefile  library.c  main.c  rgblib.1
src/link/: .gitignore  Makefile  assign.c  assign.cpp  fstack.cpp  layout.cpp  lexer.cpp  lexer.l  library.c  main.c  main.cpp  mapfile.c  object.c  object.cpp  output.c  output.cpp  parser.y  patch.c  patch.cpp  rgblink.1  rgblink.5  script.c  script.cpp  script.y  sdas_obj.c  sdas_obj.cpp  section.c  section.cpp  symbol.c  symbol.cpp  warning.cpp
src/rgbfix/: .gitignore  Makefile  main.c  makefile
test/: .gitignore  CMakeLists.txt  CTestCustom.cmake.in  fetch-test-deps.sh  helpers.sh  pokecrystal.patch  randtilegen.c  run-one-external.sh  run-tests.sh
test/asm/: .gitattributes  .gitignore  abort-on-missing-incbin-slice.asm  abort-on-missing-incbin.asm  align-16.asm  align-16.out  align-increasing.asm  align-large-ofs.err  align-large.asm  align-large.err  align-offset.asm  align-offset.err  align-pc-outside-section.err  align-unattainable.err  all-args-none.asm  anon-label-bad.asm  anon-label-bad.err  anon-label-bad.simple.err  arg-shift.asm  arg-shift.out  assert-fatal.asm  assert-fatal.err  assert-nosect-bank.err  assert.asm  assert.err  assert@-no-sect.asm  assert@-no-sect.err  backtrace-collapsed.asm  backtrace-collapsed.err  backtrace-collapsed.flags  backtrace-depth.err  backtrace-depth.flags  bad-precision.asm  bad-precision.err  bank-noexist.asm  bank-noexist.out  bank.asm  bank.err  bank.out  bit-functions.asm  (+866 more)
test/fix/: bad-custom-logo.err  bad-custom-logo.flags  bad-fix-char.err  bad-huc1-features.err  bad-huc1-features.flags  bad-mbc-name.err  bad-mbc-name.flags  bad-mbc-number.err  bad-mbc-number.flags  bad-mbc-parse.err  bad-mbc-parse.flags  bad-mbc-range.err  bad-mbc-range.flags  bad-mbc2-features.err  bad-mbc2-features.flags  bad-mbc3-features.err  bad-mbc3-features.flags  bad-mbc5-features.err  bad-mbc5-features.flags  bad-mbc6-features.err  bad-mbc6-features.flags  bad-mbc7-features.err  bad-mbc7-features.flags  bad-tpp1-features.err  bad-tpp1-features.flags  color.err  color.gb  compatible.err  compatible.gb  custom-logo.1bpp  custom-logo.err  custom-logo.flags  custom-logo.gb  deprecated-overwrite.err  deprecated-overwrite.flags  deprecated-overwrite.gb  disable-warnings.flags  dollar-hex.flags  dollar-hex.gb  empty.err  (+194 more)
test/gfx/: .gitignore  alpha_embedded.err  alpha_embedded.flags  alpha_grayscale.out.2bpp  alpha_grayscale.out.pal  alpha_rgb.out.2bpp  alpha_rgb.out.pal  ambiguous.err  at-file-ref.err  at-file-ref.flags  at-file-ref.pal  bad_manual_pals.err  bad_slice.err  bad_slice.flags  base_ids.flags  base_ids.out.2bpp  base_ids.out.attrmap  base_ids.out.pal  base_ids.out.tilemap  bg_fuse.err  bg_fuse.flags  bg_in_tile.err  bg_in_tile.flags  bg_oval.flags  bg_oval.out.2bpp  bg_oval.out.attrmap  bg_oval.out.pal  bg_oval.out.tilemap  color_curve.out.2bpp  color_curve.out.pal  column_major_palette.flags  column_major_palette.out.pal  complete_unoptimized.flags  complete_unoptimized.out.2bpp  complete_unoptimized.out.attrmap  complete_unoptimized.out.pal  complete_unoptimized.out.tilemap  crop.out.2bpp  crop.out.pal  damaged1.err  (+118 more)
test/link/: .gitattributes  .gitignore  align16.asm  align16.link  all-instructions.asm  assert.asm  assert.out  bank-numbers.out  bit-res-set-bad.asm  bit-res-set-bad.out  bit-res-set.asm  cascading-errors-fatal-assert.out  cascading-errors.asm  cascading-errors.out  db-@.asm  fixed-oob.out  high-low-a.asm  invalid-bank-t.out  invalid-bank.asm  invalid-patches.asm  invalid-patches.out  invalid-ram-types-d.out  invalid-ram-types.asm  label-diff.asm  large-constant.asm  large-constant.inc  large-constant.link  large-constant.out  ldh-bad.asm  ldh-bad.out  linkerscript-escapes-test.link  linkerscript-escapes-test.out  linkerscript-include.asm  linkerscript-include.link  linkerscript-include.out  linkerscript-no-newline-eof.asm  linkerscript-no-newline-eof.inc  linkerscript-no-newline-eof.link  linkerscript-no-newline-eof.out  linkerscript-noexist.link  (+79 more)
test/patches/: LADX-Disassembly.patch  SameBoy.patch  libbet.patch  pokecrystal.patch  ucity.patch
(+491 files in other folders)
